# notes-app-rust

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml
src/: main.rs
src/controllers/: hello_controller.rs
src/models/: hello_model.rs  mod.rs
src/routes/: health_check_route.rs  mod.rs
src/utils/: custom_error.rs  error.rs  mod.rs
