[package]
name = "notes-app-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.3"
axum-prometheus = "0.7.0"
chrono = { version = "0.4.24", features = ["serde"] }
dotenv = "0.15.0"
metrics = "0.24.0"
metrics-exporter-prometheus = "0.16.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.95"
sqlx = { version = "0.8.2", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid", "runtime-tokio-rustls"] }
tokio = { version = "1.27.0", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }
